# bu_agent_cli

./: .env  .env.example  .gitignore  .tgagentignore  AGENTS.md  CHANGELOG.md  RALPH_LOOP_GUIDE.md  README.md  SERVER_GUIDE.md  TOKEN_STREAMING_GUIDE.md  claude_code.py  code_review_report.md  main.py  pyproject.toml  ralph_init.py  ralph_loop.py  test_client_delta.py  test_client_http.py  test_server.py  tg_agent_cli.pth  tg_crab_main.py  tg_crab_worker.json
.claude/: settings.local.json
.devagent/agents/: code-reviewer.md  frontend-design-analyzer.md  frontend-task-splitter.md  qa-validation-engineer.md
.doc/: FRONTEND_GUIDE.md  IM_DESIGN.md  IM_RUNTIME_FLOW.md  LLM_GATEWAY.md  LLM_GATEWAY_REFACTOR_CHECKLIST.md  PHASE1_CONTEXT_WINDOW_UI_DESIGN.md  PLUGIN_DEVELOPMENT_GUIDE.md  RALPH_LOOP_GUIDE.md  SERVER_GUIDE.md  TOKEN_QUOTA_PHASED_PLAN.md  TOKEN_STREAMING_GUIDE.md  WORKER_AUTH_SSO_DESIGN.md  WORKER_SERVER_API_SPEC.md  WORKER_SSE_DESIGN.md  WORKER_SSE_PHASE1_PLAN.md  WORKER_SSE_PHASE1_SERVER_GUIDE.md
.doc/打包/: TG_AGENT_WINDOWS_INSTALL_DESIGN.md  TG_AGENT_WINDOWS_PORTABLE_GUIDE.md  win_deploy.ps1  说明.md
.tg_crab/: token.json
agent_core/: __init__.py  observability.py  release_notes.py  runtime_paths.py  updater.py
agent_core/agent/: ARCHITECTURE.md  __init__.py  budget.py  command_safety.py  config.py  context.py  context_store.py  events.py  hitl.py  hooks.py  model_routing_hook.py  permissions.py  registry.py  runtime_events.py  runtime_loop.py  runtime_state.py  service.py  subagent_manager.py  thinking_parser.py  tool_call_validation.py
agent_core/bootstrap/: __init__.py  agent_factory.py  session_bootstrap.py
agent_core/bus/: __init__.py  events.py  queue.py
agent_core/channels/: __init__.py  base.py  manager.py  telegram.py  zhaohu.py
agent_core/gateway/: __init__.py  dispatcher.py  main.py  service.py
agent_core/heartbeat/: __init__.py  service.py
agent_core/llm/: __init__.py  base.py  factory.py  messages.py  schema.py  views.py
agent_core/lsp/: __init__.py  client.py  config.py  formatter.py  manager.py  protocol.py  types.py
agent_core/mcp/: __init__.py  client.py  config.py  formatter.py  instructions.py  manager.py  protocol.py  registry.py  types.py
agent_core/memory/: __init__.py  review.py  store.py  tools.py
agent_core/plugin/: __init__.py  executor.py  loader.py  manager.py
agent_core/prompts/: IDENTITY.md  SOUL.md  USER.md  remote_reset_startup.md  (+1 more)
bu_agent/: __init__.py  core.py  shell.py
bu_agent_sdk/: __init__.py  version.py
cli/: __init__.py  agents_handler.py  app.py  at_commands.py  cron_handler.py  image_input.py  init_agent.py  interactive_input.py  lsp_handler.py  mcp_handler.py  memory_handler.py  model_switch_service.py  plugins_handler.py  ralph_commands.py  ralph_models.py  ralph_process_manager.py  ralph_service.py  resume_handler.py  session_runtime.py  session_store.py  settings_handler.py  skills_handler.py  slash_commands.py  tui_app.py  update_handler.py
config/: gateway_routes.server.example.json  model_config.py  model_presets.json  release_notes.json
cron/: __init__.py  archive.py  delivery.py  jobs.py  locks.py  models.py  scheduler.py  service.py
docs/: agent_product_brief_zh.md  auto-update-design.md  bash-background-task-design.md  cli-user-manual.md  custom-protocol-launcher-design.md  custom-protocol-launcher-linux-design.md  llm-gateway-streaming-design.md  lsp-design.md  mcp-design.md  package-structure.md  skill-user-guide.md  standalone-packaging.md  subagent-user-guide.md  user-files-guide.md  web-remote-console-p1-api-design.md  web-remote-console-p1-design.md  web-remote-console-p1-frontend-design.md
frontend/: index.html  workflow.md
gateway/: pom.xml
packaging/: tg-agent.spec
plugins/: runtime_helpers.py
scripts/: build_standalone.ps1  build_standalone.sh  inspect_bridge_db.py  install-tg-agent.ps1  install-tg-agent.sh  release.ps1
tests/: test_agent_cancellation.py  test_agent_hooks.py  test_agents_handler.py  test_app_at_integration.py  test_at_command_e2e.py  test_at_commands.py  test_bash_tool.py  test_bootstrap.py  test_browser_harness_surrogates.py  test_browser_harness_tool.py  test_bus.py  test_cli_app_snapshot.py  test_cli_context_budget_display.py  test_cli_context_window_ui.py  test_cli_defaults.py  test_cli_local_bridge.py  test_cli_resume.py  test_cli_session_runtime.py  test_cli_settings.py  test_cli_terminal_repaint.py  test_command_safety.py  test_compaction_working_set.py  test_context_budget_engine.py  test_context_level1_level2.py  test_context_tool_pair_integrity.py  test_cron_hosts.py  test_cron_jobs.py  test_cron_scheduler.py  test_cron_tool_and_slash.py  test_excel_tool.py  test_files_tool.py  test_gateway_chat_model.py  test_gateway_config.py  test_gateway_dispatcher.py  test_gateway_integration.py  test_heartbeat_service.py  test_hooks.py  test_im_bridge_store.py  test_image_analysis_tool.py  test_init_agent.py  (+54 more)
tg_mem/: __init__.py  exceptions.py
tools/: __init__.py  agent_tool.py  async_task.py  bash.py  browser_harness.py  cronjob.py  files.py  image_analysis.py  lsp.py  mcp.py  message.py  path_resolution.py  resolve_path.py  run_parallel_subagents.py  run_subagent.py  sandbox.py  search.py  shell_tasks.py  skills.py  subagent.py  task_cancel.py  task_output.py  task_status.py  team_tool.py  text_encoding.py  todos.py  web.py  xlsx.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+474 files in other folders)
