[project]
name = "tg-agent-cli"
version = "0.1.0"
description = "A simplified agent CLI framework for running LLM agents with tool calling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "prompt-toolkit>=3.0.0",
    "packaging (>=23.0,<25.0)",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "anyio>=3.0.0",
    "PyYAML>=6.0.1",
    "pygments"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tg-agent = "claude_code:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bu_agent_sdk", "cli", "tools"]

[tool.hatch.build.targets.wheel.force-include]
"claude_code.py" = "claude_code.py"
"config" = "config"
"ralph_init.py" = "ralph_init.py"
"ralph_loop.py" = "ralph_loop.py"
"template" = "template"
".devagent" = ".devagent"
".env.example" = ".env.example"
"README.md" = "README.md"
"plugins" = "plugins"

[tool.hatch.build.targets.sdist]
include = [
    "bu_agent_sdk/**",
    "cli/**",
    "tools/**",
    "claude_code.py",
    "config/**",
    "ralph_init.py",
    "ralph_loop.py",
    "template/**",
    ".devagent/**",
    ".env.example",
    "README.md",
    "plugins/**",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.poetry]
package-mode = false