[project]
name = "tg-agent-cli"
version = "0.1.0"
description = "A simplified agent CLI framework for running LLM agents with tool calling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7,<3",
    "openai>=2.15,<3",
    "httpx>=0.28,<1",
    "prompt-toolkit>=3.0,<4",
    "packaging>=23,<25",
    "rich>=13,<15",
    "python-dotenv>=1,<2",
    "PyYAML>=6,<7",
    "pygments>=2,<3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.21,<1",
    "black>=24.8,<27",
    "ruff>=0.6,<1",
]
server = [
    "fastapi>=0.116,<1",
    "uvicorn>=0.35,<1",
]

[project.scripts]
tg-agent = "claude_code:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bu_agent_sdk", "cli", "tools"]

[tool.hatch.build.targets.wheel.force-include]
"claude_code.py" = "claude_code.py"
"config" = "config"
"ralph_init.py" = "ralph_init.py"
"ralph_loop.py" = "ralph_loop.py"
"template" = "template"
".devagent" = ".devagent"
".env.example" = ".env.example"
"README.md" = "README.md"
"plugins" = "plugins"

[tool.hatch.build.targets.sdist]
include = [
    "bu_agent_sdk/**",
    "cli/**",
    "tools/**",
    "claude_code.py",
    "config/**",
    "ralph_init.py",
    "ralph_loop.py",
    "template/**",
    ".devagent/**",
    ".env.example",
    "README.md",
    "plugins/**",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.poetry]
package-mode = false
